Fix broken CSS

--- a/web-app/src/app/game-display/game-display.component.css
+++ b/web-app/src/app/game-display/game-display.component.css
@@ -1,7 +1,7 @@
 .tile-container {
   display: block;
   column-count: 10;
-  column-gap: 2px;
+  column-gap: 5px;
   column-fill: initial;
 }
 
